[package]
name = "str_best_match"
version = "0.1.0"
authors = ["Steve <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[release]
debug = false
debug-assertions = false
# lto does help but not by much with pcre2
lto = true
codegen-units=1
opt-level = 3
panic = 'abort'  # does cleanup upon panics
trustflags = ["-C", "target-cpu=native"]

[dependencies]
strsim = "0.10.0"
structopt = "0.3.14"
threadpool = "1.8.1"